--- a/PartyHub_Project/templates/Common/navigation_bar.html
+++ b/PartyHub_Project/templates/Common/navigation_bar.html
@@ -11,28 +11,18 @@
         <!-- Линкове за не влезли потребители -->
         {% if not request.user.is_authenticated %}
         <div id="guest_links">
-            <a href="">Login</a>
+            <a href="{%  url 'login' %}">Login</a>
             <a href="{% url 'register' %}">Register</a>
         </div>
         {% else %}
 
-            {% if request.user.is_organizer %}  <!-- if the user is organizer has this attribute -->
-                <!-- Линкове за организатори -->
-                <div id="organizer_links">
-                    <a href="">Create Event</a>
-                    <a href="">View My Events</a>
-                </div>
-
-
-           {% else %}
                 <!-- Линкове за влезли потребители -->
                 <div id="user_links">
-                    <a href="">My Account</a>
+                    <a href="{% url 'profile_details' %}">My Account</a>
                     <a href="">Events</a>
                     <a href="">My Tickets</a>
                 </div>
 
-            {% endif %}
     {% endif %}
     </div>
 </nav>
