--- a/PartyHub_Project/templates/Common/navigation_bar.html
+++ b/PartyHub_Project/templates/Common/navigation_bar.html
@@ -18,8 +18,9 @@
 
             <!-- Линкове за влезли потребители -->
             <div id="user_links">
-                <a href="">Create Event</a>
-                <a href="">Events</a>
+                <a href="">Create Party</a>
+                <a href="{% url 'all_parties' %}">Parties</a>
+                <a href="{% url 'users' %}">Find Friends</a>
 
                 <!-- Падащо меню за "My Account" -->
                 <div class="dropdown">
@@ -27,7 +28,8 @@
                     <div class="dropdown-content">
                         <a href="{% url 'profile_details' %}">View Profile</a>
                         <a href="">My Tickets</a>
-                        <a href="">My Friends</a>
+                        <a href="{% url 'friends_list' %}">My Friends</a>
+                        <a href="{% url 'index' %}">My Parties</a>
                         <form method="post" action="{% url 'logout' %}" class="logout-form">
                             {% csrf_token %}
                             <button type="submit" class="logout-link"><a>Logout</a></button>
