Add: added parties views and templates

--- a/PartyHub_Project/templates/Common/navigation_bar.html
+++ b/PartyHub_Project/templates/Common/navigation_bar.html
@@ -18,7 +18,7 @@
 
             <!-- Линкове за влезли потребители -->
             <div id="user_links">
-                <a href="">Create Party</a>
+                <a href="{% url 'create_party' %}">Create Party</a>
                 <a href="{% url 'all_parties' %}">Parties</a>
                 <a href="{% url 'users' %}">Find Friends</a>
 
