Change: changet the frient functionality to following functionality

--- a/PartyHub_Project/templates/Accounts/Users_search.html
+++ b/PartyHub_Project/templates/Accounts/Users_search.html
@@ -31,7 +31,7 @@
                         <a href="" class="view-profile-btn">View Profile</a>
                         <form method="post" action="{% url 'add_friend' user.pk %}">
                             {% csrf_token %}
-                            <button type="submit" class="add-friend-btn">Add Friend</button>
+                            <button type="submit" class="add-friend-btn">Follow</button>
                         </form>
                     </div>
                 </li>
