--- a/PartyHub_Project/templates/Accounts/profile_details.html
+++ b/PartyHub_Project/templates/Accounts/profile_details.html
@@ -8,7 +8,7 @@
         <div class="profile-header">
             <!-- Профилна снимка и VIP статус -->
             <div class="profile-picture-wrapper">
-                {% if user.profile.profile_picture %}
+                {% if user.profile_picture %}
                 <img src="{{ user.profile_picture.url }}" alt="Profile Picture" class="profile-picture {% if user.is_vip %}vip{% endif %}">
                 {% else %}
                 <img src="{% static 'images/profiles/default_img.jpg' %}" alt="Profile Picture" class="profile-picture {% if user.is_vip %}vip{% endif %}">
@@ -26,8 +26,9 @@
 
         <!-- Линкове към приятели и билети -->
         <div class="profile-links">
-            <p><strong>Friends:</strong> <a href="">{{ user.friends.count }} Friends</a></p>
-            <p><strong>Tickets:</strong> <a href="">{{ user.tickets.count }} Tickets</a></p>
+            <p> <a href="">{{ user.get_following.count }} Following</a></p>
+            <p> <a href="">{{ user.get_followers.count }} Followers</a></p>
+            <p> <a href="">{{ user.tickets.count }} Tickets</a></p>
         </div>
 
         <!-- Информация за потребителя -->
