--- a/PartyHub_Project/templates/Accounts/user_details.html
+++ b/PartyHub_Project/templates/Accounts/user_details.html
@@ -8,10 +8,10 @@
         <div class="profile-header">
             <!-- Профилна снимка и VIP статус -->
             <div class="profile-picture-wrapper">
-                {% if user.profile_picture %}
-                <img src="{{ user.profile_picture.url }}" alt="Profile Picture" class="profile-picture {% if user.is_vip %}vip{% endif %}">
+                {% if object.profile_picture %}
+                <img src="{{ object.profile_picture.url }}" alt="Profile Picture" class="profile-picture {% if object.is_vip %}vip{% endif %}">
                 {% else %}
-                <img src="{% static 'images/profiles/default_img.jpg' %}" alt="Profile Picture" class="profile-picture {% if user.is_vip %}vip{% endif %}">
+                <img src="{% static 'images/profiles/default_img.jpg' %}" alt="Profile Picture" class="profile-picture {% if object.is_vip %}vip{% endif %}">
             {% endif %}
                 {% if user.is_vip %}
                     <div class="vip-badge">VIP</div>
@@ -19,27 +19,22 @@
             </div>
             <!-- Потребителско име и точки -->
             <div class="profile-info">
-                <h2>{{ user.username }}</h2>
-                <p class="points">Points: {{ user.points }} </p>
+                <h2>{{ object.username }}</h2>
+                <p class="points">Points: {{ object.points }}</p>
             </div>
         </div>
 
         <!-- Линкове към приятели и билети -->
         <div class="profile-links">
-            <p> <a href="{% url 'following_list' %}">{{ user.get_following.count }} Following</a></p>
-            <p> <a href="{% url 'followers_list' %}">{{ user.get_followers.count }} Followers</a></p>
-            <p> <a href="">{{ user.tickets.count }} Tickets</a></p>
+            <p> <a href="{% url 'following_list' %}">{{ object.get_following.count }} Following</a></p>
+            <p> <a href="">{{ object.get_followers.count }} Followers</a></p>
+{#            <p> <a href="">{{ object.tickets.count }} Tickets</a></p>#}
         </div>
 
         <!-- Информация за потребителя -->
         <div class="profile-info-details">
             <h3>About Me: </h3>
-            <p>{{ user.bio }}</p>
-        </div>
-
-        <!-- Бутон за редактиране на профила -->
-        <div class="edit-profile">
-            <a href="{% url 'profile_edit' %}" class="edit-btn">Edit Profile</a>
+            <p>{{ object.bio }}</p>
         </div>
     </div>
 {% endblock %}
