--- a/PartyHub_Project/templates/Accounts/following_list.html
+++ b/PartyHub_Project/templates/Accounts/following_list.html
@@ -11,19 +11,25 @@
         <ul class="friends-list">
             {% for following_user in following_list %}
                 <li class="friend-item">
-                    {% if following.profile_picture %}
+                    {% if following_user.following.profile_picture %}
                         <img src="{{ following_user.following.profile_picture.url }}" alt="{{ following_user.following.username }}'s profile picture" class="profile-image">
                     {% else %}
                         <img src="{% static 'images/profiles/default_img.jpg' %}" alt="{{ following_user.following.username }}'s profile picture" class="profile-image">
                     {% endif %}
                     <div class="friend-info">
-                        <h3>{{ following_user.following.username }}</h3>
+{#                        <a href="{%  url 'user_details' following_user.following.id %}" >#}
+                            <h3>{{ following_user.following.username }}</h3>
+{#                        </a>#}
+
                         <p>Points: {{ following_user.following.points }}</p>
                     </div>
-                    <form method="post" action="{% url 'unfollow' following_user.following.id %}">
-                        {% csrf_token %}
-                        <button type="submit" class="remove-friend-btn">Unfollow</button>
-                    </form>
+                    <div class="user-actions">
+                        <a href="{%  url 'user_details' following_user.following.pk %}" class="view-profile-btn">View Profile</a>
+                        <form method="post" action="{% url 'unfollow' following_user.following.pk %}">
+                            {% csrf_token %}
+                            <button type="submit" class="remove-friend-btn">Unfollow</button>
+                        </form>
+                    </div>
                 </li>
             {% endfor %}
         </ul>
