--- a/PartyHub_Project/templates/Accounts/profile_details.html
+++ b/PartyHub_Project/templates/Accounts/profile_details.html
@@ -26,8 +26,8 @@
 
         <!-- Линкове към приятели и билети -->
         <div class="profile-links">
-            <p> <a href="{% url 'following_list' %}">{{ user.get_following.count }} Following</a></p>
-            <p> <a href="{% url 'followers_list' %}">{{ user.get_followers.count }} Followers</a></p>
+            <p> <a href="{% url 'following_list' user.pk %}">{{ user.get_following.count }} Following</a></p>
+            <p> <a href="{% url 'followers_list' user.pk %}">{{ user.get_followers.count }} Followers</a></p>
             <p> <a href="">{{ user.tickets.count }} Tickets</a></p>
         </div>
 
@@ -39,7 +39,7 @@
 
         <!-- Бутон за редактиране на профила -->
         <div class="edit-profile">
-            <a href="{% url 'profile_edit' %}" class="edit-btn">Edit Profile</a>
+            <a href="{% url 'profile_edit' user.pk %}" class="edit-btn">Edit Profile</a>
         </div>
     </div>
 {% endblock %}
