--- a/PartyHub_Project/templates/Common/navigation_bar.html
+++ b/PartyHub_Project/templates/Common/navigation_bar.html
@@ -26,7 +26,7 @@
                 <div class="dropdown">
                     <a href="#" class="dropbtn">My Account</a>
                     <div class="dropdown-content">
-                        <a href="{% url 'profile_details' %}">View Profile</a>
+                        <a href="{% url 'profile_details' request.user.pk %}">View Profile</a>
                         <a href="">My Tickets</a>
 {#                        <a href="{% url 'friends_list' %}">Following</a>#}
                         <a href="{% url 'index' %}">My Parties</a>
