--- a/PartyHub_Project/templates/Accounts/following_list.html
+++ b/PartyHub_Project/templates/Accounts/following_list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <div class="friends-list-container">
-    <h2>Your Friends</h2>
+    <h2>Following</h2>
 
     {% if following_list %}
         <ul class="friends-list">
