--- a/PartyHub_Project/templates/Accounts/user_details.html
+++ b/PartyHub_Project/templates/Accounts/user_details.html
@@ -43,5 +43,9 @@
             <h3>About Me: </h3>
             <p>{{ other_user.bio }}</p>
         </div>
+        <form method="post" action="{% url 'unfollow' other_user.pk %}">
+            {% csrf_token %}
+            <button type="submit" class="remove-friend-btn">Unfollow</button>
+        </form>
     </div>
 {% endblock %}
