--- a/PartyHub_Project/templates/Common/navigation_bar.html
+++ b/PartyHub_Project/templates/Common/navigation_bar.html
@@ -1,3 +1,4 @@
+{% load custom_tags %}
 {% load static %}
 <nav id="navbar">
     <div id="logo">
@@ -18,6 +19,10 @@
 
             <!-- Линкове за влезли потребители -->
             <div id="user_links">
+                {% get_live_events request as live_party %}
+                {% if live_party %}
+                    <a href="">Live Party</a>
+                {% endif %}
                 <a href="{% url 'create_party' %}">Create Party</a>
                 <a href="{% url 'all_parties' %}">Parties</a>
                 <a href="{% url 'users' %}">Find Friends</a>
