fix: fixed profile bugs

--- a/PartyHub_Project/templates/Accounts/followers_list.html
+++ b/PartyHub_Project/templates/Accounts/followers_list.html
@@ -11,17 +11,17 @@
     {% for follower in following_followers %}
                 <ul class="friends-list">
                         <li class="friend-item">
-                            {% if follower.user.profile_picture %}
-                                <img src="{{ follower.user.profile_picture.url }}" alt="{{ follower.user.username }}'s profile picture" class="profile-image">
+                            {% if follower.profile_picture %}
+                                <img src="{{ follower.profile_picture.url }}" alt="{{ follower.username }}'s profile picture" class="profile-image">
                             {% else %}
-                                <img src="{% static 'images/profiles/default_img.jpg' %}" alt="{{ follower.user.username }}'s profile picture" class="profile-image">
+                                <img src="{% static 'images/profiles/default_img.jpg' %}" alt="{{ follower.username }}'s profile picture" class="profile-image">
                             {% endif %}
                             <div class="friend-info">
-                                <h3>{{ follower.user.username }}</h3>
-                                <p>Points: {{ follower.user.points }}</p>
+                                <h3>{{ follower.username }}</h3>
+                                <p>Points: {{ follower.points }}</p>
                             </div>
                                 <div class="user-actions">
-                                <a href="{%  url 'user_details' follower.user.pk %}" class="view-profile-btn">View Profile</a>
+                                <a href="{%  url 'user_details' follower.pk %}" class="view-profile-btn">View Profile</a>
                             </div>
                         </li>
                 </ul>
@@ -31,17 +31,17 @@
     {% for follower in non_following_followers %}
         <ul class="friends-list">
                 <li class="friend-item">
-                    {% if follower.user.profile_picture %}
-                        <img src="{{ follower.user.profile_picture.url }}" alt="{{ follower.user.username }}'s profile picture" class="profile-image">
+                    {% if follower.profile_picture %}
+                        <img src="{{ follower.profile_picture.url }}" alt="{{ follower.username }}'s profile picture" class="profile-image">
                     {% else %}
-                        <img src="{% static 'images/profiles/default_img.jpg' %}" alt="{{ follower.user.username }}'s profile picture" class="profile-image">
+                        <img src="{% static 'images/profiles/default_img.jpg' %}" alt="{{ follower.username }}'s profile picture" class="profile-image">
                     {% endif %}
                     <div class="friend-info">
-                        <h3>{{ follower.user.username }}</h3>
-                        <p>Points: {{ follower.user.points }}</p>
+                        <h3>{{ follower.username }}</h3>
+                        <p>Points: {{ follower.points }}</p>
                     </div>
                         <div class="user-actions">
-                        <a href="{%  url 'user_details' follower.user.pk %}" class="view-profile-btn">View Profile</a>
+                        <a href="{%  url 'user_details' follower.pk %}" class="view-profile-btn">View Profile</a>
 
                              <form method="post" action="{% url 'follow' follower.pk %}">
                                 {% csrf_token %}
