--- a/PartyHub_Project/static/css/Accounts_css/profile_details.css
+++ b/PartyHub_Project/static/css/Accounts_css/profile_details.css
@@ -129,8 +129,26 @@
     font-size: 14px;
 }
 
+.view-profile-btn, .add-friend-btn {
+    padding: 8px 12px;
+    font-size: 14px;
+    text-decoration: none;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
 .remove-friend-btn:hover {
     background-color: #c9302c;
+}
+
+.add-friend-btn {
+    background-color: #008CBA;
+    border: none;
+}
+
+.add-friend-btn:hover {
+    background-color: #007BB5;
 }
 
 /* Адаптивност */
